syntax = "proto3";

package com.road.yishi.proto.chat;

message ChatFriendMsg {
  int32 fromId = 1;
  string fromNick = 2;
  int32 toId = 3;
  string encodeMsg = 4;
  string sendDate = 5;
  int32 result = 6;
  int32 job = 7;
  int32 headid = 8;
  int32 level = 9;
  int32 frameId = 10;
  int32 consortiaId = 11;
  string consortiaName = 12;
  int32 appellId = 13;
  int32 fight = 14;
}
