syntax = "proto3";

package com.road.yishi.proto.chat;

message ChatStateMsg {
  int32 userId = 1;
  int32 chatState = 2;
  int32 result = 3;
  string replayStr = 4;
}
